RESOLVED FIXED101232
[CoordinatedGraphics] compositing/iframes/connect-compositing-iframe.html crashes
https://bugs.webkit.org/show_bug.cgi?id=101232
Summary [CoordinatedGraphics] compositing/iframes/connect-compositing-iframe.html cra...
Balazs Kelemen
Reported 2012-11-05 10:14:03 PST
compositing/iframes/connect-compositing-iframe.html crashes
Attachments
Patch (2.24 KB, patch)
2012-11-06 01:56 PST, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-11-06 01:56:23 PST
Balazs Kelemen
Comment 2 2012-11-06 02:47:18 PST
Comment on attachment 172527 [details] Patch Clearing flags on attachment: 172527 Committed r133578: <http://trac.webkit.org/changeset/133578>
Balazs Kelemen
Comment 3 2012-11-06 02:47:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.